1.0.0b11
--------

 - Expanded Alert functionality
 - Windows bugfixes

1.0.0b10
--------

 - Use pytest for unit testing
 - remove check module, add check.equals comparison logic to ReturnValue
 - Modify coverage evaluation to work with pytest
 - remove brownie.types package, move classes to related modules
 - replace wei function with Wei class, expand functionality
 - add EthAddress and HexString helper classes
 - improved formatting for tx.traceback and tx.call_trace

1.0.0b9
-------

 - Support for overloaded function names
 - Bugfixes
 - Minor code changes and improvements

1.0.0b8
-------

 - Rebuild of coverage evaluation functionality using contract ASTs
 - Split coverage eval results between branches and statements, add GUI support
 - Add tracebacks for failed transactions, better call trace formatting
 - Allow contract minification before compiling
 - Enable output console in GUI (very basic for now)
 - Rebuild brownie console using code.InteractiveConsole
 - Significant code refactoring and reorganization
 - Emphasis on standardized structure across modules and increased ease of testing
 - More tests, coverage at 88%

1.0.0b7
-------

 - Commented dev revert strings
 - Custom exception classes
 - Standardize contract outputs
 - Add Travis and Tox, test coverage at 67%
 - Many bugfixes

1.0.0b6
-------

 - Changes to ContractConstructor call arguments
 - Bugfixes and minor changes

1.0.0b5
-------

 - Use relative paths in build json files
 - Revert calls-as-transactions when evaluating coverage
 - Significant refactor and optimizations to coverage analysis
 - changes to coverageMap format, add coverageMapTotals
 - Save coverage data to reports/ subfolder
 - Improvements to GUI

1.0.0b4
-------

 - Add broadcast_reverting_tx flag
 - Use py-solc-x 0.4.0
 - Detect and attach to an already active RPC client, better verbosity on RPC exceptions
 - Introduce Singleton metaclass and refactor code to take advantage