@@ -21,7 +21,7 @@ This will create the following project structure within the folder:
 * ``contracts/``: Contract source code
 * ``scripts/``: Scripts for deployment and interaction
 * ``tests/``: Scripts for testing your project
-* ``brownie-config.json``: Configuration file for the project
+* ``brownie-config.json``: :ref:`Configuration file <config>` for the project
 
 You can also initialize "`Brownie mixes <https://github.com/brownie-mix>`__", simple templates to build your project upon. For the examples in this document we will use the `token <https://github.com/brownie-mix/token-mix>`__ mix, which is a very basic ERC-20 implementation:
 
@@ -53,6 +53,8 @@ You will see the following output:
     Brownie project has been compiled at token/build/contracts
 
 Once a contract has been complied, it will only be recompiled if the source file has changed.
+
+You can change the compiler version and optimization settings by editting the :ref:`config file <config-solc>`.
 
 Interacting with your Project
 =============================
